--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,1 @@
-#ti{color:green; border-style: ridge;background-color: black}
+#ti{color:salmon; border-style: ridge;background-color: black;font-family: myFirstFont;}
