--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  </head>
 <div  style="text-align:center" >
-  <h1 id=ti>
-    Welcome to {{ title }}!
+  <h1  style="font-family: 'Pacifico', cursive;" id=ti>
+   {{ title }}Trend Zone
     
   </h1>
   <product></product>
@@ -29,7 +31,7 @@
   <div>
     <router-outlet></router-outlet>
   </div>
- 
+ </div>
   
 
   <!--<customer-login></customer-login>-->
