--- a/src/Registration/Login-module/product-component/product.component.html
+++ b/src/Registration/Login-module/product-component/product.component.html
@@ -62,6 +62,8 @@ body {
   background-color: green;
 }
 
+
+
 @media screen and (max-width: 600px) {
   .topnav .login-container {
     float: none;
@@ -82,39 +84,56 @@ body {
 </head>
 <body>
 
-
+ 
   <div class="topnav">
-    <a class="active" href="#clothing">Clothing</a>
+      <a class="active" href="#home">Home</a>
+    <a href="#Clothing" [routerLink]="['./clothing']">Clothing</a>
     <a href="#footwear" [routerLink]="['./footwear']">Footwear</a>
     <a href="#electronics" [routerLink]="['./electronics']">Electronics</a>
     <a href="#mobile" [routerLink]="['./mobile']">Mobile</a>
-    <a [routerLink]="['/customer-login']">Login</a>
+    <a [routerLink]="['/customer-login']" style="float: right">Login</a>
+   
     <div class="AdminLoginComponent ">
       <form action="/action_page.php">
         <!-- <input type="text" placeholder="Username" name="username">
         <input type="text" placeholder="Password" name="psw"> -->
         <!--<button type="submit">Login</button>-->
-        <ul class="nav navbar-nav">
-          <!-- <li><a [routerLink]="['./product']">Product Display</a></li>
-         
-          <li><a [routerLink]="['/retailer-homepage']">Retailer Homepage</a></li>
-          <li><a [routerLink]="['/admin-homepage']">Admin Homepage</a></li> -->
-        
-        
-         
-        
-        </ul>
-      
-
-        <!--<button type="submit">Sign Up</button>-->
+        <ul class="nav navbar-nav"></ul>
       </form>
+     
 
 
     </div>
+
   </div>
-  
  
-  
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="assets/logo.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img6.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img5.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="assets/img7.jpg" alt="Fourth slide">
+          </div>
+      </div>
+      
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+ 
+
   </body>
   </html>
   
