--- a/src/app/admin-homepage/admin-homepage.component.html
+++ b/src/app/admin-homepage/admin-homepage.component.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 table, td, th {  
-  border: 1px solid #ddd;
+  border: 1px solid rgb(27, 17, 17);
   text-align: left;
 }
 
@@ -16,11 +16,23 @@ th, td {
   padding: 15px;
 }
 
+.bg-img {
+      /* The image used */
+      background-image: url("assets/img4.jpg");
+
+      min-height: 550px;
+
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
 
 </style>
 </head>
 <body>
-
+  <div class="bg-img">
 <div class="panel" >
     <div class="panel-heading">{{title}}</div>
     <div class="panel-body">
