--- a/src/app/retailer-homepage/retailer-homepage.component.html
+++ b/src/app/retailer-homepage/retailer-homepage.component.html
@@ -1,78 +1,131 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.bg-img {
+      /* The image used */
+      background-image: url("assets/img4.jpg");
+
+      min-height: 550px;
+
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 300px) {
+  .col-25, .col-65, input[type=submit] {
+    width: 70%;
+    margin-top: 0;
+  }
+}
+</style>
+</head>
+<body>
+  <div class="bg-img">
+
+<div class="container pxy-5">
+  <div class="row">
+    <div class="col-md-6">
+      <h2 style="font-family:courier;">Add Products</h2>
+      <form action="/action_page.php">
+        Product name:<br>
+        <input type="text" name="name">
+        <br>
+        Product image:<br>
+        <input type="text" name="image">
+        <br>
+        Product Description:<br>
+        <input type="text" name="description">
+        <br>
+        Product Price:<br>
+        <input type="text" name="price">
+        <br>
+        <br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
 
 
-   
- 
-<div class="panel" >
-                
-        <div class="panel-heading">{{title}}</div>
-        <div class="panel-body">
-    <div  class="table-responsive">
-        <form>
-  
-            <button type="submit" a [routerLink]="['/add-product']"  align="right" width="48" height="48">Add Product</button><br><br>
-    <table align="center">
 
-   <tr>
-     <td>Product Name:</td>
-        <td><input type='text' name='name' required></td>
-    </tr>
-    <tr> <td>&nbsp;</td> </tr>
-    <tr>
-        <td>Product Image:</td>
-        <td><input type='text' name='name' required></td>
-    </tr>
-    <tr> <td>&nbsp;</td> </tr>
-    <tr>
-        <td>Product Description:</td>
-        <td><input type='text' name='name' required></td>
-    </tr>
-    <tr> <td>&nbsp;</td> </tr>
-    <tr>
-        
-        <td>Product Price:</td>
-        <td><input type='text' name='name' required></td>
-    </tr>
-    <tr> <td>&nbsp;</td> </tr>
-    <tr>
-     
-            <button type="submit" style="margin-left: 50%">Submit</button>
-            
-    </table> 
-     
-    <button type="submit" a [routerLink]="['/delete-product']" >Delete Product</button><br><br>
-    <div>
-        <router-outlet></router-outlet>
-      </div>
-    <!-- <table>
-            <tr>
-            </tr>
-            <table align="center">
-            <button type="Delete" >Delete Product</button><br><br>
-            <tr>
-                <td>Product Name:</td>
-                <td><input type='text' name='name' required></td>
-            </tr>
-            <tr> <td>&nbsp;</td> </tr>
-            <tr>
-                <td>Product Image:</td>
-                <td><input type='text' name='name' required></td>
-            </tr>
-            <tr> <td>&nbsp;</td> </tr>
-            <tr>
-                <td>Product Description:</td>
-                <td><input type='text' name='name' required></td>
-            </tr>
-            <tr> <td>&nbsp;</td> </tr>
-            <tr>
-                
-                <td>Product Price:</td>
-                <td><input type='text' name='name' required></td>
-            </tr>
-            <tr> <td>&nbsp;</td> </tr>
-            <tr>
-             
-                    <button type="Submit">Delete</button>
-            </table>
-            </table>
-    </form>
-    </div> -->
+    <div class="col-md-6">
+      <h2 style="font-family:courier;">Delete Products</h2>
+      <form action="/action_page.php">
+        Product name:<br>
+        <input type="text" name="name">
+        <br>
+        Product image:<br>
+        <input type="text" name="image">
+        <br>
+        Product Description:<br>
+        <input type="text" name="description">
+        <br>
+        Product Price:<br>
+        <input type="text" name="price">
+        <br>
+        <br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
